# Changelog

## v0.1.3

- Add Libuuid_jll as dependency to not require uuid to be installed on host system

## v0.1.2

- Add ! to the names of generated functions of prepare_bitstream

## v0.1.1

- Provide build-in XRT libraries using BinaryBuilder.jl

## v0.1.0

- Initial version