@@ -1,0 +1,11 @@
+using .XRTWrap: Device
+
+# TODO: Create a custom device struct to also 
+#       store device information and further 
+#       methods to allow inspection of available
+#       devices
+# struct Device
+#     bfd::String
+#     name::String
+#     ...
+# end
