@@ -1,5 +1,10 @@
 # Changelog
 
+## Unreleased
+
+- Move wrapped API to XRTWrap submodule to support easier extension of core functionality
+- Use CMake module instead of OS cmake, full CMake workflow including install, add uuid link library
+
 ## v0.1.3
 
 - Add Libuuid_jll as dependency to not require uuid to be installed on host system
